src/test/resources/frontendReference/invalid/semanticErr/function/functionSwapArgs.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 15:16 -- Incompatible type at true (expected: INT, actual: BOOL)
